# Image-Analysis

./: ImageAnalysis  README.md
Border and shape detection/: Hough.cpp  Hough.h  Projet_analyse.pro  Readme
Border and shape detection/header/: connexe.h  fenetre.h  fileselector.h  image.h  mainwindow.h  matrice.h
Border and shape detection/src/: connexe.cpp  fileselector.cpp  image.cpp  mainwindow.cpp  matrice.cpp  traitement.cpp
Segmentation and Human Detection/: CMakeLists.txt  README.md
Segmentation and Human Detection/latex/: conference_101719.tex
Segmentation and Human Detection/src/: main.cpp  segmentation.cpp
latex/: conference_101719.aux
src/: segmentation.hpp
